Added Css File for Employee

--- a/public/Employeeindex.html
+++ b/public/Employeeindex.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="align-content: center;"> SUPERCOOLJOBS</h1>
+    <h1>SUPERCOOLJOBS</h1>
 </body>
 </html>
