--- a/public/login.html
+++ b/public/login.html
@@ -4,21 +4,21 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="CSS/loginstyles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi" />
 </head>
 
 <body>
     <form id="Loginform" method="post">
-        <h2>LOGIN</h2>
+        <h1>SUPERCOOLJOBS.COM</h1>
         <div class="container">
             <div class="login_form_form">
                 <form action="includes/login.inc.php" method="post">
-                    <input type="text" name="name" placeholder="Username/Email...">
-                    <input type="text" name="pwd" placeholder="Password...">
+                    <input type="text" name="name" placeholder="Username">
+                    <input type="text" name="pwd" placeholder="Password">
                     <button type="submit" name="submit">Log in as Employee</button>
                     <p>OR</p>
                     <button type="submit" name="submit">Log in as Employee</button>
-                    
-                    <a href="signup.php" id="fakebutton">Sign Up</a>
+                    <a href="signup.php" id="fakebutton">Don't have an account? Sign up HERE</a>
                 </form>
             </div>
         </div>
