--- a/public/login.html
+++ b/public/login.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="CSS/loginstyles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi" />
-</head>
+    <link rel="stylesheet" type="text/css" href="CSS/loginstyles.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Kosugi"
+    />
+  </head>
 
-<body>
+  <body>
     <form id="Loginform" method="post">
-        <h1>SUPERCOOLJOBS.COM</h1>
-        <div class="container">
-            <div class="login_form_form">
-                <form action="includes/login.inc.php" method="post">
-                    <input type="text" name="name" placeholder="Username">
-                    <input type="text" name="pwd" placeholder="Password">
-                    <button type="submit" name="submit">Log in as Employee</button>
-                    <p>OR</p>
-                    <button type="submit" name="submit">Log in as Employee</button>
-                    <a href="signup.php" id="fakebutton">Don't have an account? Sign up HERE</a>
-                </form>
-            </div>
+      <h1>SUPERCOOLJOBS.COM</h1>
+      <div class="container">
+        <div class="login_form_form">
+          <form action="includes/login.inc.php" method="post">
+            <input type="text" name="name" placeholder="Username" />
+            <input type="text" name="pwd" placeholder="Password" />
+          </form>
         </div>
-
+        <button type="submit" name="submit">Log in as Employee</button>
+        <p>OR</p>
+        <button type="submit" name="submit">Log in as Employee</button>
+        <a href="signup.php" id="fakebutton"
+          >Don't have an account? Sign up HERE</a
+        >
+      </div>
     </form>
-</body>
-
-
-
+  </body>
 </html>
