--- a/public/login.html
+++ b/public/login.html
@@ -1,26 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<<<<<<< HEAD
-  <body>
-    <form id="Loginform" method="post">
-      <h1>SUPERCOOLJOBS.COM</h1>
-      <div class="container">
-        <div class="login_form_form">
-          <form method="post">
-            <input type="text" name="name" placeholder="Username" />
-            <input type="text" name="pwd" placeholder="Password" />
-          </form>
-        </div>
-        <div id="buttons">
-          <button type="submit" name="submit">Log in as Employee</button>
-          <p>OR</p>
-          <button type="submit" name="submit" id="button2">
-            Log in as Employee
-          </button>
-        </div>
-        <a href="signup.html">Don't have an account? Sign up HERE</a>
-=======
 <head>
   <title>Login</title>
   <link rel="stylesheet" type="text/css" href="CSS/loginstyles.css" />
@@ -36,13 +16,12 @@
           <input type="text" name="name" placeholder="Username" />
           <input type="text" name="pwd" placeholder="Password" />
         </form>
->>>>>>> 07590bc04843525bd6a13edb1d5376c4dc7c858b
       </div>
       <div class="buttons">
         <button type="submit" name="employeelogin">Log in as Employee</button>
         <p>OR</p>
         <button type="submit" name="employerlogin">Log in as Employer</button>
-        <P>Don't have an account? Sign up <a href=" INSERT HERE " id="clicksignup">HERE</a></P>
+        <P>Don't have an account? Sign up <a href="signup.html" id="clicksignup">HERE</a></P>
       </div>
     </div>
   </form>
