feat: mongo insert user

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
     </head>
 
     <body>
-        
+        <ol>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="employee_index.html">Employee_Index</a></li>
+        </ol>
     </body>
 
 
