--- a/public/employee_profile.html
+++ b/public/employee_profile.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" href="employee_profile.css">
+    <link rel="stylesheet" href="CSS/employee_profile.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/employerviewstyle.css">
     <title>SUPERCOOLJOBS</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="./js/employer_index_action.js"></script>
 </head>
-
 <body>
+    <nav id="navbar" class="navbar navbar-expand-lg">
+        <a id="title" class="navbar-brand" href="./employerview.html">
+            SUPERCOOLJOBS
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
 
-    <!--Navigation Bar -->
-    <ul id="menu">
-        <li><a>SUPERCOOLJOBS</a></li>
-        <li><a>About Us</a></li>
-        <li><a>Post a Job</a></li>
-        <li><a>Resume Search</a></li>
-        <li><a>Your Business</a></li>
-    </ul>
+            </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav"> <a class="nav-link" href="#">About Us</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Post a jobs</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
+                <a class="navbar-brand" href="#">
+                    <img class="img-responsive" width="130px" height="" alt="" src="assets/profilepic.jpg">
+                </a>
+        </div>
+        </li>
+        </ul>
+        </div>
+    </nav>
 
+    <br>
+    
     <!--Profile Page-->
     <div id="profileBox">
         <div>
@@ -34,8 +56,11 @@
             <p>This paragraph is for listing all the experience.</p>
         </div>
     </div>
+   
+    <div id="pageextender"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
-
-
-
