--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
     <h1>SUPERCOOLJOBS.COM</h1>
     <div class="container">
       <div class="login_form_form">
-        <div action="includes/login.inc.php" method="post">
+        <div method="post">
           <input type="text" id="username" placeholder="Username" value="123" />
           <input type="text" id="password" placeholder="Password" value="123" />
         </div>
