fixed minor spelling errors

--- a/public/employer_index.html
+++ b/public/employer_index.html
@@ -142,9 +142,9 @@
                 style="font-family: 'Kosugi', sans-serif;">U.S <input type="checkbox"> <span class="checkmark"></span>
             </label>
             <p class="font-class">Engineering</p> <label class="containercheck"
-                style="font-family: 'Kosugi', sans-serif;">Softare Engineering <input type="checkbox"> <span
+                style="font-family: 'Kosugi', sans-serif;">Software Engineering <input type="checkbox"> <span
                     class="checkmark"></span> </label> <label class="containercheck"
-                style="font-family: 'Kosugi', sans-serif;">Mechaical Engineering <input type="checkbox"> <span
+                style="font-family: 'Kosugi', sans-serif;">Mechanical Engineering <input type="checkbox"> <span
                     class="checkmark"></span> </label> <label class="containercheck"
                 style="font-family: 'Kosugi', sans-serif;">Chemical Engineering <input type="checkbox"> <span
                     class="checkmark"></span> </label>
