--- a/public/employee_index.html
+++ b/public/employee_index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<nav id="navbar" class="navbar navbar-expand-lg">
-			<a id="title" class="navbar-brand" href="./employerview.html"> SUPERCOOLJOBS </a>
+			<a id="title" class="navbar-brand" href="employee_index.html"> SUPERCOOLJOBS </a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
