--- a/public/employer_index.html
+++ b/public/employer_index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg">
-        <a id="title" class="navbar-brand" href="./employerview.html">
+        <a id="title" class="navbar-brand" href="employer_index.html">
             SUPERCOOLJOBS
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
