--- a/public/login.html
+++ b/public/login.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="buttons">
-        <button onclick="onLoginClick()" name="employeelogin">Log in as Employee</button>
+        <button onclick="onLoginClick()" name="employeelogin">Log in</button>
         <P>Don't have an account? Sign up <a href="signup.html" id="clicksignup">HERE</a></P>
       </div>
     </div>
