--- a/public/create_job.html
+++ b/public/create_job.html
@@ -44,23 +44,24 @@
         <h2>Create a Job</h2>
 
         <div>
-            <p>Name</p>
+            <p>Enter Name</p>
             <input type="text" id="name">
         </div>
         <div>
-            <p>Organization</p>
+            <p>Enter Organization</p>
             <input type="text" id="organization">
         </div>
         <div>
-            <p>Location</p>
+            <p>Enter Location</p>
             <input type="text" id="location">
         </div>
         <div>
-            <p>Qualification</p>
+            <p>Enter Qualification</p>
             <input type="text" id="qualification">
         </div>
         <div>
-            <img src="assets/Emp1.png" alt="image" id="imageURL">
+            <p>Enter Image URL</p>
+            <input type="text" id="imageURL">
         </div>
     </div>
    
