--- a/public/about.html
+++ b/public/about.html
@@ -25,7 +25,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav"> <a class="nav-link" href="#">About Us</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Post a jobs</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Post a job</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
                 <a class="navbar-brand" href="#">
@@ -44,11 +44,7 @@
         <div>
             <h2>About Us</h2>
             <p>
-                SUPERCOOLJOBS.com was created for SOFE2800 using HTML, CSS, and JS to create 
-            </p>
-
-            <p>
-                The job recruitment platform  aims to connect recruiters with individuals seeking employment.
+                At SUPERCOOLJOBS.COM we are a group of students from Ontariotech University! We are a team of 4 students who are passionate about creating a new and unique job recruitment platform. This new and unique job recruitment platform aims to connect recruiters with individuals seeking employment. We are dedicated to giving employers an easy experience recruiting new talents and employees a new way to apply to companies. We hope that you have a great experience using our platform and we hope that you find your dream job or an amazing employee!
             </p>
         </div>
     </div>
