--- a/public/employee_index.html
+++ b/public/employee_index.html
@@ -17,7 +17,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav">
-					<a class="nav-link" href="#">About Us</a>
+					<a class="nav-link" href="about.html">About Us</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Post Your Resume</a>
