--- a/public/employee_profile.html
+++ b/public/employee_profile.html
@@ -25,7 +25,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav"> <a class="nav-link" href="#">About Us</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Post a jobs</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Post a job</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
                 <a class="navbar-brand" href="#">
