--- a/public/employer_index.html
+++ b/public/employer_index.html
@@ -24,7 +24,7 @@
             </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav"> <a class="nav-link" href="#">About Us</a> </li>
+            <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Post a job</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
