--- a/public/employee_index.html
+++ b/public/employee_index.html
@@ -20,13 +20,10 @@
 					<a class="nav-link" href="about.html">About Us</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Post Your Resume</a>
+						<a class="nav-link" href="employee_profile.html">Your Profile</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Your Profile</a>
-					</li>
-					<a class="navbar-brand" href="#">
-						<img class="img-responsive" width="130px" height="" alt="" src="assets/profilepic.jpg">
+					<a class="navbar-brand" href="employee_profile.html">
+						<img class="img-responsive" width="130px" height="" alt="" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
 					</a>
 			</div>
 			</li>
