--- a/public/create_job.html
+++ b/public/create_job.html
@@ -25,11 +25,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Post a jobs</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
                 <a class="navbar-brand" href="#">
-                    <img class="img-responsive" width="130px" height="" alt="" src="assets/profilepic.jpg">
+                    <img class="img-responsive" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
                 </a>
         </div>
         </li>
