--- a/public/create_job.html
+++ b/public/create_job.html
@@ -43,7 +43,7 @@
         <h2>Create a Job</h2>
 
         <div>
-            <p>Enter Name</p>
+            <p>Desired Job Position</p>
             <input type="text" id="name">
         </div>
         <div>
