--- a/public/employer_index.html
+++ b/public/employer_index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="employer_profile.html">Your Business</a> </li>
                 <a class="navbar-brand" href="#">
                     <img class="img-responsive" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
                 </a>
