--- a/public/employer_profile.html
+++ b/public/employer_profile.html
@@ -25,9 +25,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Post a job</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="employer_profile.html">Your Business</a> </li>
                 <a class="navbar-brand" href="#">
                     <img class="img-responsive" width="130px" height="" alt="" src="assets/profilepic.jpg">
                 </a>
