feat: working yay

--- a/public/about.html
+++ b/public/about.html
@@ -24,12 +24,16 @@
             </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
+            <ul class="navbar-nav"> 
+                <li class="nav-item"> <a class="nav-link" href="about.html">About Us</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
-                <a class="navbar-brand" href="#">
-                    <img class="img-responsive" width="130px" height="" alt="" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
-                </a>
+                <li class="nav-item"> <a class="nav-link" href="employee_index.html">View Employees</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="employer_index.html">View Employers</a> </li>
+                <li>
+                    <a class="navbar-brand" href="#">
+                        <img class="img-responsive" width="130px" height="" alt="" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
+                    </a>
+                </li>
         </div>
         </li>
         </ul>
