--- a/public/employer_index.html
+++ b/public/employer_index.html
@@ -24,14 +24,15 @@
             </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
+            <ul class="navbar-nav"> <li class="nav-item"> <a class="nav-link" href="about.html">About Us</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="employer_profile.html">Your Business</a> </li>
-                <a class="navbar-brand" href="#">
-                    <img class="img-responsive" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
-                </a>
-        </div>
-        </li>
+                <li class="nav-item"> <a class="nav-link" href="employee_index.html">View Employees</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="employer_index.html">View Employers</a> </li>
+                <li>
+                    <a class="navbar-brand" href="#">
+                        <img class="img-responsive" width="130px" height="" alt="" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
+                    </a>
+                </li>
         </ul>
         </div>
     </nav>
@@ -45,9 +46,9 @@
                     placeholder="Search for Employee Careers" name="Search for a Job"> </div>
         </form>
         <div id="relatedtobusiness" class="font-class">
-            <h3 style="font-weight: bold; text-align: center;"> Employees Related to Your Business </h3>
+            <h3 style="font-weight: bold; text-align: center;"> Jobs Related to You </h3>
         </div> 
-        <div id="list">
+        <div id="list"></div>
             <!-- <a class="font-class2" href="#">
                 <div id="paragraphbox">
                     <div class="picturebox">
@@ -131,8 +132,6 @@
                     of Toronto </p>
             </div>
         </a> -->
-        </div>
-
         <div id="filtertitle">
             <p class="font-class">Location</p>
         </div>
