--- a/public/login.html
+++ b/public/login.html
@@ -14,8 +14,8 @@
     <div class="container">
       <div class="login_form_form">
         <div method="post">
-          <input type="text" id="username" placeholder="Username" value="123" />
-          <input type="text" id="password" placeholder="Password" value="123" />
+          <input type="text" id="username" placeholder="Username" value="" />
+          <input type="password" id="password" placeholder="Password" value="" />
         </div>
       </div>
       <div class="buttons">
