--- a/public/profile.html
+++ b/public/profile.html
@@ -10,7 +10,7 @@
     <title>SUPERCOOLJOBS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="./js/employer_index_action.js"></script>
+    <script src="./js/profile_action.js"></script>
 </head>
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg">
@@ -24,11 +24,12 @@
             </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
+            <ul class="navbar-nav"> <a class="nav-link" href="#">About Us</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Post a jobs</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#">Resume Search</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
                 <a class="navbar-brand" href="#">
-                    <img class="img-responsive" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
+                    <img class="img-responsive" width="130px" height="" alt="" src="assets/profilepic.jpg">
                 </a>
         </div>
         </li>
@@ -40,20 +41,6 @@
     
     <!--Profile Page-->
     <div id="profileBox">
-        <div>
-            <img src="assets/Emp1.png" alt="profile picture">
-            <h2>Name</h2>
-            <p>Contact</p>
-            <ul>
-                <li>Phone</li>
-                <li>Email</li>
-            </ul>
-            <p>Location: Toronto, Canada</p>
-        </div>
-        <div>
-            <h2>Experience</h2>
-            <p>This paragraph is for listing all the experience.</p>
-        </div>
     </div>
    
     <div id="pageextender"></div>
