--- a/public/signup.html
+++ b/public/signup.html
@@ -14,12 +14,12 @@
         <div class="container">
             <div class="signup_form_form">
                 <div>
-                    <input value="123" id="firstName" type="text" placeholder="First Name" />
-                    <input value="123" id="lastName" type="text" placeholder="Last Name" />
-                    <input value="123" id="email" type="text" placeholder="Email" />
-                    <input value="123" id="username" type="text" placeholder="Username" />
-                    <input value="123" id="password" type="text" placeholder="Password" />
-                    <input value="123" id="passwordRepeat" type="text" placeholder="Repeat Password" />
+                    <input value="" id="firstName" type="text" placeholder="First Name" />
+                    <input value="" id="lastName" type="text" placeholder="Last Name" />
+                    <input value="" id="email" type="text" placeholder="Email" />
+                    <input value="" id="username" type="text" placeholder="Username" />
+                    <input value="" id="password" type="password" placeholder="Password" />
+                    <input value="" id="passwordRepeat" type="password" placeholder="Repeat Password" />
                 </div>
             </div>
             <div>
