--- a/public/create_job.html
+++ b/public/create_job.html
@@ -10,7 +10,7 @@
     <title>SUPERCOOLJOBS</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="./js/employer_index_action.js"></script>
+    <script src="./js/create_job.js"></script>
 </head>
 <body>
     <nav id="navbar" class="navbar navbar-expand-lg">
@@ -24,12 +24,15 @@
             </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav"> <a class="nav-link" href="about.html">About Us</a> </li>
+            <ul class="navbar-nav"> <li class="nav-item"> <a class="nav-link" href="about.html">About Us</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="create_job.html">Post a job</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">Your Business</a> </li>
-                <a class="navbar-brand" href="#">
-                    <img class="img-responsive" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
-                </a>
+                <li class="nav-item"> <a class="nav-link" href="employee_index.html">View Employees</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="employer_index.html">View Employers</a> </li>
+                <li>
+                    <a class="navbar-brand" href="#">
+                        <img class="img-responsive" width="130px" height="" alt="" src="https://cdn.discordapp.com/attachments/1036390218925883442/1049202261290651699/1250689_1.png">
+                    </a>
+                </li>
         </div>
         </li>
         </ul>
@@ -60,7 +63,10 @@
         </div>
         <div>
             <p>Enter Image URL</p>
-            <input type="text" id="imageURL">
+            <input type="text" id="imageUrl">
+        </div>
+        <div style="display: flex; align-items: center; justify-content: center;">
+            <button style="width: 500px; height: 100px;" onclick="onSubmitNewJob()">Add new Job posting</button>
         </div>
     </div>
    
