--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <script src="./js/index.js"></script>
     </head>
 
     <body>
         <ol>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Signup</a></li>
-            <li><a href="employee_index.html">Employee_Index</a></li>
+            <li><a href="employer_index.html">Employee_Index</a></li>
         </ol>
     </body>
 
